--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -10,6 +10,14 @@
   --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
   --color-ring: var(--ring);
   --color-input: var(--input);
   --color-border: var(--border);
@@ -33,8 +41,6 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
-  --color-topnav: var(--topnav);
-  --color-topnav-foreground: var(--topnav-foreground);
   --animate-skeleton: skeleton 2s -1s infinite linear;
   @keyframes skeleton {
     to {
@@ -51,66 +57,78 @@
 }
 
 :root {
-  --radius: 0.75rem;
-  --background: color-mix(in srgb, var(--color-rose-50) 60%, var(--color-white));
-  --theme-color: var(--color-rose-50);
-  --foreground: var(--color-stone-800);
+  --radius: 0.625rem;
+  --background: var(--color-white);
+  --theme-color: var(--color-white);
+  --foreground: var(--color-neutral-800);
   --card: var(--color-white);
-  --card-foreground: var(--color-stone-800);
+  --card-foreground: var(--color-neutral-800);
   --popover: var(--color-white);
-  --popover-foreground: var(--color-stone-800);
-  --primary: var(--color-rose-500);
-  --primary-foreground: var(--color-white);
-  --secondary: --alpha(var(--color-rose-900) / 5%);
-  --secondary-foreground: var(--color-stone-800);
-  --muted: --alpha(var(--color-stone-900) / 4%);
-  --muted-foreground: color-mix(in srgb, var(--color-stone-500) 85%, var(--color-rose-700));
-  --accent: --alpha(var(--color-rose-800) / 6%);
-  --accent-foreground: var(--color-stone-800);
+  --popover-foreground: var(--color-neutral-800);
+  --primary: var(--color-neutral-800);
+  --primary-foreground: var(--color-neutral-50);
+  --secondary: --alpha(var(--color-black) / 4%);
+  --secondary-foreground: var(--color-neutral-800);
+  --muted: --alpha(var(--color-black) / 4%);
+  --muted-foreground: color-mix(in srgb, var(--color-neutral-500) 90%, var(--color-black));
+  --accent: --alpha(var(--color-black) / 4%);
+  --accent-foreground: var(--color-neutral-800);
   --destructive: var(--color-red-500);
   --destructive-foreground: var(--color-red-700);
-  --info: var(--color-sky-500);
-  --info-foreground: var(--color-sky-700);
+  --info: var(--color-blue-500);
+  --info-foreground: var(--color-blue-700);
   --success: var(--color-emerald-500);
   --success-foreground: var(--color-emerald-700);
   --warning: var(--color-amber-500);
   --warning-foreground: var(--color-amber-700);
-  --border: --alpha(var(--color-rose-800) / 8%);
-  --input: --alpha(var(--color-stone-900) / 12%);
-  --ring: var(--color-rose-400);
-  --topnav: color-mix(in srgb, var(--color-white) 96%, var(--color-rose-100));
-  --topnav-foreground: var(--color-stone-500);
+  --border: --alpha(var(--color-black) / 8%);
+  --input: --alpha(var(--color-black) / 10%);
+  --ring: var(--color-neutral-400);
+  --sidebar: var(--color-neutral-50);
+  --sidebar-foreground: color-mix(in srgb, var(--color-neutral-800) 64%, var(--sidebar));
+  --sidebar-primary: var(--color-neutral-800);
+  --sidebar-primary-foreground: var(--color-neutral-50);
+  --sidebar-accent: --alpha(var(--color-black) / 4%);
+  --sidebar-accent-foreground: var(--color-neutral-800);
+  --sidebar-border: --alpha(var(--color-black) / 6%);
+  --sidebar-ring: var(--color-neutral-400);
 }
 
 .dark {
-  --background: color-mix(in srgb, var(--color-stone-950) 94%, var(--color-rose-950));
-  --theme-color: var(--color-stone-950);
-  --foreground: var(--color-stone-100);
-  --card: color-mix(in srgb, var(--background) 94%, var(--color-rose-900));
-  --card-foreground: var(--color-stone-100);
-  --popover: color-mix(in srgb, var(--background) 94%, var(--color-rose-900));
-  --popover-foreground: var(--color-stone-100);
-  --primary: var(--color-rose-400);
-  --primary-foreground: var(--color-stone-950);
-  --secondary: --alpha(var(--color-rose-200) / 6%);
-  --secondary-foreground: var(--color-stone-100);
+  --background: color-mix(in srgb, var(--color-neutral-950) 95%, var(--color-white));
+  --theme-color: var(--color-zinc-950);
+  --foreground: var(--color-neutral-100);
+  --card: color-mix(in srgb, var(--background) 98%, var(--color-white));
+  --card-foreground: var(--color-neutral-100);
+  --popover: color-mix(in srgb, var(--background) 98%, var(--color-white));
+  --popover-foreground: var(--color-neutral-100);
+  --primary: var(--color-neutral-100);
+  --primary-foreground: var(--color-neutral-800);
+  --secondary: --alpha(var(--color-white) / 4%);
+  --secondary-foreground: var(--color-neutral-100);
   --muted: --alpha(var(--color-white) / 4%);
-  --muted-foreground: color-mix(in srgb, var(--color-stone-400) 85%, var(--color-rose-300));
-  --accent: --alpha(var(--color-rose-200) / 7%);
-  --accent-foreground: var(--color-stone-100);
+  --muted-foreground: color-mix(in srgb, var(--color-neutral-500) 90%, var(--color-white));
+  --accent: --alpha(var(--color-white) / 4%);
+  --accent-foreground: var(--color-neutral-100);
   --destructive: color-mix(in srgb, var(--color-red-500) 90%, var(--color-white));
   --destructive-foreground: var(--color-red-400);
-  --info: var(--color-sky-500);
-  --info-foreground: var(--color-sky-400);
+  --info: var(--color-blue-500);
+  --info-foreground: var(--color-blue-400);
   --success: var(--color-emerald-500);
   --success-foreground: var(--color-emerald-400);
   --warning: var(--color-amber-500);
   --warning-foreground: var(--color-amber-400);
-  --border: --alpha(var(--color-rose-200) / 7%);
-  --input: --alpha(var(--color-rose-200) / 10%);
-  --ring: var(--color-rose-500);
-  --topnav: color-mix(in srgb, var(--color-stone-950) 96%, var(--color-rose-900));
-  --topnav-foreground: var(--color-stone-400);
+  --border: --alpha(var(--color-white) / 6%);
+  --input: --alpha(var(--color-white) / 8%);
+  --ring: var(--color-neutral-500);
+  --sidebar: color-mix(in srgb, var(--color-neutral-950) 97%, var(--color-white));
+  --sidebar-foreground: color-mix(in srgb, var(--color-neutral-100) 64%, var(--sidebar));
+  --sidebar-primary: var(--color-neutral-100);
+  --sidebar-primary-foreground: var(--color-neutral-800);
+  --sidebar-accent: --alpha(var(--color-white) / 4%);
+  --sidebar-accent-foreground: var(--color-neutral-100);
+  --sidebar-border: --alpha(var(--color-white) / 5%);
+  --sidebar-ring: var(--color-neutral-400);
 }
 
 @layer base {
@@ -119,10 +137,14 @@
   }
   body {
     @apply relative bg-background text-foreground;
-    background-image: radial-gradient(circle, var(--color-rose-200) 0.5px, transparent 0.5px);
-    background-size: 20px 20px;
   }
-  .dark body {
-    background-image: radial-gradient(circle, var(--color-stone-800) 0.5px, transparent 0.5px);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
